# security-handbook

./: .buildinfo  .gitignore  Makefile  README.md  README_cn.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/appendix/: appendix_practical_guide.doctree  (+2 more)
1.basic/: iam.html  index.html  medical_software_cybersecurity.html  secrets_manage.html
2.protocol/: index.html  open_id.html  overview.html  wit.html  x509.html
3.library/: index.html
_sources/: index.rst.txt
appendix/: appendix_practical_guide.html  index.html  medical_software_cybersecurity.html
chapters/: ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  ch09.html  ch10.html  ch11.html  ch12.html  ch13.html  ch14.html  ch15.html  ch16.html  ch17.html  ch18.html  ch19.html  ch20.html  ch21.html  ch22.html  ch23.html  ch24.html  ch25.html  ch26.html  ch27.html  ch28.html  ch29.html  ch30.html
doc/: Makefile  implementation.md  open_id.md  stride.md
example/tls-cert-debugger/: README.md  inspect_cert_chain.sh  pyproject.toml  tls_probe.py
example/tls-cert-debugger/mitm-proxy-repro/: README.md  compare_proxy_cases.py  generate_proxy_certs.sh  mitm_https_proxy.py  origin_https_server.py  reproduce_proxy_ssl_error.py
example/tls-cert-debugger/tests/: test_mitm_proxy_repro.py  test_proxy_support.py
example/tls-cert-debugger/unable-local-issuer-repro/: .gitignore  README.md  compare_success_vs_failure.py  generate_test_certs.sh  https_server.py  reproduce_ssl_error.py
(+203 files in other folders)
