[project]
name = "security-handbook"
version = "0.1.0"
description = "Security Handbook documentation"
authors = [
    {name = "Walter Fan"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
docs = [
    "sphinx (>=9.1.0,<10.0.0)",
    "myst-parser (>=5.0.0,<6.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)",
    "sphinxcontrib-mermaid (>=2.0.1,<3.0.0)",
    "sphinx-design (>=0.7.0,<0.8.0)",
    "sphinx-togglebutton (>=0.4.5,<0.5.0)",
    "sphinxcontrib-plantuml (>=0.31,<0.32)"
]
